# practical-hypermodern-python

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
src/practical_hypermodern_python/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
