[tool.poetry]
name = "practical-hypermodern-python"
version = "0.1.2"
description = "Practical hypermodern Python project"
authors = ["Gerardo Abraham <geoabraham@tuta.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geoabraham/practical-hypermodern-python"
repository = "https://github.com/geoabraham/practical-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
practical-hypermodern-python = "practical_hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
