[tool.poetry]
name = "practical-hypermodern-python"
version = "0.1.2"
description = "Practical hypermodern Python project"
authors = ["Gerardo Abraham <geoabraham@tuta.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geoabraham/practical-hypermodern-python"
repository = "https://github.com/geoabraham/practical-hypermodern-python"
keywords = ["hypermodern"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["practical_hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = { version = "^7.0.3", extras = ["toml"] }
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
practical-hypermodern-python = "practical_hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
